# spectre

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  mkdocs.yml  requirements-docs.txt  settings.gradle.kts
.agents/skills/addressing-detekt-violations/: SKILL.md
.agents/skills/babysit-pr/: SKILL.md
.agents/skills/babysit-pr/agents/: openai.yaml
.agents/skills/babysit-pr/references/: github-api-notes.md  heuristics.md
.agents/skills/babysit-pr/scripts/: gh_pr_watch.py  test_gh_pr_watch.py
.agents/skills/jewel-swing-interop/: SKILL.md
.agents/skills/spectre/: SKILL.md
.agents/skills/spectre-release/: SKILL.md
.agents/skills/spectre/evals/: evals.json
.agents/skills/spectre/references/: intellij.md  junit.md
.agents/skills/using-git-worktree/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  jbr-pins.env
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-matrix-jdk/: action.yml
.github/scripts/: derive-release-version.sh  generate-cli-package-manifests.py  open-matrix-failure-issue.sh  resolve-matrix-jdk.sh  test-derive-release-version.sh  test-generate-cli-package-manifests.sh  test-homebrew-formula-install-semantics.rb  test-resolve-matrix-jdk.sh
.github/workflows/: ci.yml  docs.yml  ide-uitest.yml  macos-check.yml  macos.yml  package-channels.yml  release.yml  runtime-matrix.yml  validation-linux.yml  validation-windows.yml  windows.yml
Formula/: spectre.rb
agent/: build.gradle.kts  gradle.properties
agent-inject-runtime/: build.gradle.kts  gradle.properties
agent-inject-runtime/src/main/kotlin/dev/sebastiano/spectre/inject/: InjectRuntimeMarker.kt
agent-runtime/: build.gradle.kts  gradle.properties
agent-test-fixture/: build.gradle.kts
agent/api/: agent.api
agent/src/main/kotlin/dev/sebastiano/spectre/agent/: AgentAttach.kt  AgentJarResolution.kt  AgentPlatformPreflight.kt  AtomicCaptureResult.kt  AttachExceptions.kt  AttachOptions.kt  AttachRuntimePreflight.kt  AttachUserPreflight.kt  AttachedAutomator.kt  ExperimentalSpectreAgentApi.kt  ScreenshotTarget.kt  SpectreAgentException.kt  SpectreProcesses.kt
agent/src/test/kotlin/dev/sebastiano/spectre/agent/: AgentAttachIntegrationTest.kt  AgentContractCorpusTest.kt  AgentInjectAttachIntegrationTest.kt  AgentJarResolutionTest.kt  AgentPlatformPreflightTest.kt  AttachOptionsTest.kt  AttachRuntimePreflightTest.kt  AttachUserPreflightTest.kt  FixtureJavaHome.kt  FixtureJavaHomeTest.kt  InjectClasspathStrip.kt  InjectClasspathStripTest.kt  ScreenshotTargetTest.kt  SpectreProcessesTest.kt
bucket/: spectre.json
buildSrc/: settings.gradle.kts
cli/: build.gradle.kts
cli/packaging/macos/: jvm-entitlements.plist
config/detekt/: detekt.yml
core/: README.md  build.gradle.kts  gradle.properties
core/api/: core.api
core/src/test/resources/capture/: capture-schema-v1.golden.json
docs/: ARCHITECTURE.md  CNAME  CONVENTIONS.md  DOCS-STYLE.md  NOTARIZATION.md  PUBLISHING.md  RECORDING-LIMITATIONS.md  SECURITY.md  STABILITY.md  STATIC-ANALYSIS.md  TESTING.md  WORKTREE-GRADLE-PITFALLS.md  bootstrap-plan.md  index.md
docs/guide/: agent.md  automator.md  capability-matrix.md  capture.md  ci.md  cli.md  cross-jvm.md  getting-started.md  hot-reload.md  index.md  installation.md  intellij.md  interactions.md  junit.md  mcp.md  recording.md  selectors.md  synchronization.md  troubleshooting.md
docs/spikes/209-injection/: api-audit.md  decision.md  inject-packaging.md  practicalities.md  user-recipe.md
gradle/: libs.versions.toml
recording/: README.md  build.gradle.kts  gradle.properties
recording-linux/: build.gradle.kts  gradle.properties
recording-macos/: build.gradle.kts  gradle.properties
recording-windows/: build.gradle.kts  gradle.properties
recording/api/: recording.api
recording/build-fixtures/: stub-mac-helper  stub-mac-helper.README.md
recording/native/linux/: Cargo.toml
recording/native/linux/src/: gst.rs  main.rs  portal.rs  protocol.rs  recorder.rs  screenshot.rs
recording/native/macos/: Package.swift
recording/native/macos/Sources/SpectreScreenCapture/: SpectreScreenCapture.swift  SpectreScreenCaptureMain.swift  main.swift
recording/native/macos/Sources/SpectreScreenCaptureCore/: SpectreScreenCapture.swift
recording/native/macos/Tests/SpectreScreenCaptureCoreTests/: ArgumentsTests.swift  RecordingFileTypeTests.swift
recording/native/windows/: Options.cs  Program.cs  README.md  SpectreWindowCapture.csproj
recording/native/windows/SpectreWindowCapture.Tests/: OptionsParsingTests.cs  SpectreWindowCapture.Tests.csproj
sample-desktop/: build.gradle.kts
sample-intellij-plugin/: build.gradle.kts
scripts/: central_portal_check.py  spectre-smoke.sh
server/: README.md  build.gradle.kts  gradle.properties
server/api/: server.api
skill/: SKILL.md  package.json
skill/evals/: evals.json
skills/spectre/: SKILL.md
skills/spectre-capture/: SKILL.md  package.json
skills/spectre/references/: agent.md  intellij.md  junit.md  recording.md
testing/: README.md  build.gradle.kts  gradle.properties
testing/api/: testing.api
tests/: test_central_portal_check.py
(+348 files in other folders)
