[package]
name = "spectre-wayland-helper"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false
description = "Native helper for Spectre's Linux Wayland recording path. Runs the xdg-desktop-portal screen-cast handshake, extracts the PipeWire FD, and spawns gst-launch-1.0 with the FD inherited so pipewiresrc can read the granted stream. Communicates with the JVM-side recorder over stdin/stdout via newline-delimited JSON."

[[bin]]
name = "spectre-wayland-helper"
path = "src/main.rs"

[dependencies]
# dbus-rs — thin wrapper over libdbus (C library). Picked over zbus because the zbus 4.x and
# 3.x trees both pull transitive deps (toml_datetime, indexmap) that have bumped to
# edition2024 and require Rust 1.85+. Our toolchain floor is 1.75 (Ubuntu 22.04 jammy-
# backports). dbus-rs has been stable since 2018, has a much smaller dep graph, and uses
# the system libdbus which is available on every modern Linux distro. Trade-off: links a
# C library at runtime (libdbus-1.so.3, ubiquitous on Linux desktops; also a zbus runtime
# requirement transitively, just less obvious). We use the sync API — the portal flow is
# request/response + signal-wait, all straightforward sync code.
dbus = "0.9"

# serde — JSON DTOs for the JVM↔helper protocol. Newline-delimited JSON over stdin/stdout
# keeps the wire format simple and the JVM-side parsing trivial (kotlinx.serialization).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# nix — POSIX-y syscalls. Used for `fcntl(F_SETFD, ...)` clearing on the portal-granted
# PipeWire FD before spawning gst-launch (so the FD survives exec(2)). Pinned to 0.27 (the
# last 0.x line that doesn't pull edition2024 transitives on this Rust version). Default-
# features off to keep the binary lean — we only use the fcntl + signal subsets.
nix = { version = "=0.27.1", default-features = false, features = ["fs", "process", "signal"] }

# anyhow — for error propagation up to the protocol-error event. The helper is a thin
# orchestrator; we don't need fine-grained error types, but we do want context-preserving
# `?` propagation. anyhow gets us that without a custom error enum per module.
anyhow = "1"

[profile.release]
# Strip symbols + LTO for distribution: cuts the binary from ~6 MB to ~1.5 MB. Helper is
# tiny enough that LTO compile time isn't a concern.
strip = "symbols"
lto = "thin"
codegen-units = 1
